src/test/ui/borrowck/borrowck-anon-fields-struct.stderr
error[E0499]: cannot borrow `y.0` as mutable more than once at a time
  --> $DIR/borrowck-anon-fields-struct.rs:29:11
   |
LL |         Y(ref mut a, _) => a
   |           --------- first mutable borrow occurs here
...
LL |         Y(ref mut b, _) => b //~ ERROR cannot borrow
   |           ^^^^^^^^^ second mutable borrow occurs here
...
LL | }
   | - first borrow ends here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0499`.
